<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Times App</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="Th">T</string>
    <string name="F">F</string>
    <string name="S">S</string>
    <string name="proceed">proceed</string>


    <string name="spinner_title1">spinner_title1</string>
    <string name="Year">Year</string>
    <string name="Branch">Branch</string>
    <string name="Section">Section</string>
    <string name="view_timetable">View TimeTable</string>
    <string name="CHANNEL_NAME">rabbani</string>
    <string name="channel_description">daily notification</string>
    <string name="name">Name</string>
    <string name="dr_a_yesubabu_cse">Dr.A Yesubabu - CSE</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="lunch_break">Lunch Break</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="_3_cse_b">3 - CSE - B</string>
    <string name="Coding">coding</string>
    <string name="developer">Developer</string>
    <string name="developed_by"> Designed and Developed By</string>
    <string name="connect_with_me">Connect with me</string>
    <string name="cse">CSE</string>
    <string name="rabbani_shaik">Rabbani shaik</string>
    <string name="_2017_2021">2017-2021</string>
    <string name="sir_c_r_r_college_of_engineering">SIR C R R COLLEGE OF ENGINEERING</string>
    <string name="the_timesapp">The TimesApp</string>
    <string name="student_timetable">Student TimeTable</string>
    <string name="faculty_timetable">Faculty TimeTable</string>
</resources>
