<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FUI">
    <LinearLayout
        android:background="@drawable/gradientbackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sir_c_r_r_college_of_engineering"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_timesapp"
            android:textSize="18sp"
            android:textColor="#fff"
            android:textStyle="bold"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/fselection1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/Branch"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="130dp" />
        <TextView
            android:id="@+id/fselection2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="130dp"/>
        <Button
            android:background="@drawable/buttongradient"
            android:id="@+id/fdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/view_timetable" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="643dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:cardBackgroundColor="#0bcce6">
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_marginTop="138dp"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="150dp"
        android:src="@drawable/logo1"/>
</RelativeLayout>