<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sir_c_r_r_college_of_engineering"
                android:textSize="20sp"
                android:textColor="#fff"
                android:textStyle="bold"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_timesapp"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/student"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/student">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_timetable"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal">
            </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/faculty">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faculty_timetable"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textSize="18sp"
                    android:onClick="open_dev"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginTop="630dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:cardBackgroundColor="#0bcce6">
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_marginTop="138dp"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="150dp"
        android:src="@drawable/logo1"/>
</RelativeLayout>
